# arr

./: .gitignore  .gitmodules  CMakeLists.txt  arr.h  arr.hpp  arr.m  queries.txt
arr.xcodeproj/: project.pbxproj
arr.xcodeproj/project.xcworkspace/xcuserdata/phil3.xcuserdatad/: UserInterfaceState.xcuserstate
arr.xcodeproj/xcshareddata/xcschemes/: arr.xcscheme  examples.xcscheme  tlbx.xcscheme
arr.xcodeproj/xcuserdata/phil3.xcuserdatad/xcschemes/: xcschememanagement.plist
arr_old.xcodeproj/: project.pbxproj
arr_old.xcodeproj/project.xcworkspace/xcuserdata/phil3.xcuserdatad/: UserInterfaceState.xcuserstate
arr_old.xcodeproj/xcshareddata/xcschemes/: arr_tests.xcscheme  examples.xcscheme  tlbx.xcscheme
arr_old.xcodeproj/xcuserdata/phil3.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
arr_old.xcodeproj/xcuserdata/phil3.xcuserdatad/xcschemes/: xcschememanagement.plist
core/: arr1.tem  arr2slice.tem  arr2sub.tem
examples/: CMakeLists.txt  examples.cpp
headers/: CMakeLists.txt  arr.hpp  arr1.hpp  arr1.tem  arr2.hpp  arr2.tem  arr2slice.hpp  arr2slice.tem  arr2sub.hpp  arr2sub.tem  arr3.hpp  arr3.tem  barr1.hpp  barr2.hpp  barr2slice.hpp  barr2sub.hpp  barr3.hpp  bool1.hpp  bool2.hpp  bool2slice.hpp  bool3.hpp  cpx1.cpp  cpx1.hpp  cpx2.cpp  cpx2.hpp  darr1.hpp  darr2.hpp  darr2slice.hpp  darr2sub.hpp  dbl1.hpp  dbl2.hpp  dbl2slice.hpp  dbl2sub.hpp  error.hpp  mth.hpp  trg.hpp  uiarr1.hpp  uiarr2.hpp  uint1.hpp  uint2.hpp
sources/: CMakeLists.txt  arr.cpp  arr1.tem  arr2.tem  arr2slice.tem  arr2sub.tem  arr3.tem  barr1.cpp  barr2.cpp  barr2slice.cpp  barr2sub.cpp  barr3.cpp  cpx1.cpp  cpx2.cpp  darr1.cpp  darr2.cpp  darr2slice.cpp  darr2sub.cpp  dbl1.cpp  dbl2.cpp  uiarr1.cpp  uiarr2.cpp
src/: arr.hpp
src/headers/: arr2.hpp  arr2sub.hpp  barr1.hpp  barr2.hpp  barr2slice.hpp  barr2sub.hpp  darr1.hpp  darr2.hpp
src/sources/: arr.cpp  arr1.tem  arr2.tem  arr2slice.tem  arr3.tem  barr1.cpp  barr2.cpp  barr2slice.cpp  darr1.cpp  darr2.cpp  darr2slice.cpp  mth.cpp  trg.cpp
src/tlbx/: mth.hpp  trg.hpp
test/: CMakeLists.txt  arr_tests.cpp  test-main.cpp
